rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_and_regular_rolling.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_to_date | orders__rolling_sum_trailing_7d
-----------------------+-----------------------------+--------------------------------
2024-01-10 00:00:00    | 500.00                      | 305.00                         
2024-01-11 00:00:00    | 500.00                      | 230.00                         
2024-01-12 00:00:00    | 850.00                      | 580.00                         
2024-01-13 00:00:00    | 850.00                      | 580.00                         
2024-01-14 00:00:00    | 940.00                      | 670.00                         
2024-01-15 00:00:00    | 1000.00                     | 530.00                         
2024-01-16 00:00:00    | 1120.00                     | 650.00                         
2024-01-17 00:00:00    | 1120.00                     | 620.00                         
2024-01-18 00:00:00    | 1300.00                     | 800.00                         
2024-01-19 00:00:00    | 1300.00                     | 450.00                         
2024-01-20 00:00:00    | 1300.00                     | 450.00                         
2024-01-21 00:00:00    | 1300.00                     | 360.00                         
2024-01-22 00:00:00    | 1300.00                     | 300.00                         
2024-01-23 00:00:00    | 1300.00                     | 180.00                         
2024-01-24 00:00:00    | 1300.00                     | 180.00                         
2024-01-25 00:00:00    | 1550.00                     | 250.00
