rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_avg_no_time_dimension.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__rolling_avg_to_date
---------------------------
137.7500000000000000
