rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_no_granularity.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__rolling_sum_to_date
---------------------------
1300.00
