rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_quarter.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_to_date_quarter
-----------------------+------------------------------------
2024-01-01 00:00:00    | NULL                               
2024-01-02 00:00:00    | 150.00                             
2024-01-03 00:00:00    | 195.00                             
2024-01-04 00:00:00    | 270.00                             
2024-01-05 00:00:00    | 270.00                             
2024-01-06 00:00:00    | 270.00                             
2024-01-07 00:00:00    | 270.00                             
2024-01-08 00:00:00    | 470.00                             
2024-01-09 00:00:00    | 470.00                             
2024-01-10 00:00:00    | 500.00                             
2024-01-11 00:00:00    | 500.00                             
2024-01-12 00:00:00    | 850.00                             
2024-01-13 00:00:00    | 850.00                             
2024-01-14 00:00:00    | 940.00                             
2024-01-15 00:00:00    | 1000.00                            
2024-01-16 00:00:00    | 1120.00                            
2024-01-17 00:00:00    | 1120.00                            
2024-01-18 00:00:00    | 1300.00                            
2024-01-19 00:00:00    | 1300.00                            
2024-01-20 00:00:00    | 1300.00                            
2024-01-21 00:00:00    | 1300.00                            
2024-01-22 00:00:00    | 1300.00                            
2024-01-23 00:00:00    | 1300.00                            
2024-01-24 00:00:00    | 1300.00                            
2024-01-25 00:00:00    | 1550.00                            
2024-01-26 00:00:00    | 1550.00                            
2024-01-27 00:00:00    | 1550.00                            
2024-01-28 00:00:00    | 1550.00                            
2024-01-29 00:00:00    | 1550.00                            
2024-01-30 00:00:00    | 1550.00                            
2024-01-31 00:00:00    | 1550.00                            
2024-02-01 00:00:00    | 1590.00                            
2024-02-02 00:00:00    | 1590.00                            
2024-02-03 00:00:00    | 1590.00                            
2024-02-04 00:00:00    | 1590.00                            
2024-02-05 00:00:00    | 1700.00                            
2024-02-06 00:00:00    | 1700.00                            
2024-02-07 00:00:00    | 1700.00                            
2024-02-08 00:00:00    | 1700.00                            
2024-02-09 00:00:00    | 1700.00                            
2024-02-10 00:00:00    | 2000.00                            
2024-02-11 00:00:00    | 2000.00                            
2024-02-12 00:00:00    | 2000.00                            
2024-02-13 00:00:00    | 2000.00                            
2024-02-14 00:00:00    | 2055.00                            
2024-02-15 00:00:00    | 2055.00
