rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_with_filter.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__created_at_day | orders__rolling_sum_to_date
-----------------------+----------------------------
2024-01-10 00:00:00    | 255.00                     
2024-01-11 00:00:00    | 255.00                     
2024-01-12 00:00:00    | 605.00                     
2024-01-13 00:00:00    | 605.00                     
2024-01-14 00:00:00    | 605.00                     
2024-01-15 00:00:00    | 665.00                     
2024-01-16 00:00:00    | 665.00                     
2024-01-17 00:00:00    | 665.00                     
2024-01-18 00:00:00    | 845.00                     
2024-01-19 00:00:00    | 845.00                     
2024-01-20 00:00:00    | 845.00
