rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/rolling_window/snapshots/cubesqlplanner__tests__integration__rolling_window__to_date_variations__to_date_year.snap
---
source: cubesqlplanner/src/tests/integration/rolling_window/to_date_variations.rs
expression: result
---
orders__created_at_month | orders__rolling_sum_to_date_year
-------------------------+---------------------------------
2024-01-01 00:00:00      | 1550.00                         
2024-02-01 00:00:00      | 2275.00                         
2024-03-01 00:00:00      | 2755.00
